--- a/LibGit2Sharp.DynamicsAX/Controls/Styles.xaml
+++ b/LibGit2Sharp.DynamicsAX/Controls/Styles.xaml
@@ -1,12 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="DataGrid">
-        <Setter Property="AlternatingRowBackground" Value="WhiteSmoke"></Setter>
-        <Setter Property="VerticalGridLinesBrush" Value="Transparent"></Setter>
-        <Setter Property="HorizontalGridLinesBrush" Value="Transparent"></Setter>
-    </Style>
-        
-    <Style TargetType="DataGridCell">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:controls="clr-namespace:LibGit2Sharp.DynamicsAX.Controls">
+    <!--<Style TargetType="DataGridCell">
         <Setter Property="Padding" Value="0,5,0,5"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -17,5 +12,79 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>-->
+    
+    <ControlTemplate x:Key="CommitsRowTemplate" TargetType="DataGridRow">
+        <Border Name="PART_RowBack"
+                BorderBrush="{TemplateBinding BorderBrush}"
+                BorderThickness="{TemplateBinding BorderThickness}"
+                Background="{TemplateBinding Background}"
+                SnapsToDevicePixels="True">
+            <SelectiveScrollingGrid Panel.ZIndex="0" Name="PART_Grid">
+                <SelectiveScrollingGrid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </SelectiveScrollingGrid.ColumnDefinitions>
+                <SelectiveScrollingGrid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </SelectiveScrollingGrid.RowDefinitions>
+
+                <DataGridCellsPresenter 
+                        Grid.Column="1"
+                        ItemsPanel="{TemplateBinding ItemsPanel}"
+                        SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                <DataGridDetailsPresenter 
+                        Grid.Column="1" Grid.Row="1"
+                        SelectiveScrollingGrid.SelectiveScrollingOrientation="{Binding AreRowDetailsFrozen, ConverterParameter={x:Static SelectiveScrollingOrientation.Vertical}, Converter={x:Static DataGrid.RowDetailsScrollingConverter}, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}"
+                        Visibility="{TemplateBinding DetailsVisibility}" />
+                <DataGridRowHeader 
+                        Grid.RowSpan="2"
+                        SelectiveScrollingGrid.SelectiveScrollingOrientation="Vertical"
+                        Visibility="{Binding HeadersVisibility, ConverterParameter={x:Static DataGridHeadersVisibility.Row}, Converter={x:Static DataGrid.HeadersVisibilityConverter}, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" />
+
+            </SelectiveScrollingGrid>
+        </Border>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsSelected" Value="True">
+                <Setter TargetName="PART_RowBack" Property="Background" Value="BlueViolet" />
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+    
+    <!--<Style x:Key="CommitsGridStyle" BasedOn="{StaticResource {x:Type DataGrid}}" TargetType="DataGrid">
+        
+    </Style>-->
+
+    <Style x:Key="CommitsRowStyle" TargetType="DataGridRow">
+        <Setter Property="Template" Value="{StaticResource CommitsRowTemplate}" />
     </Style>
+
+    <Style TargetType="DataGrid">
+        <Setter Property="AlternatingRowBackground" Value="WhiteSmoke"></Setter>
+        <Setter Property="VerticalGridLinesBrush" Value="Transparent"></Setter>
+        <Setter Property="HorizontalGridLinesBrush" Value="Transparent"></Setter>
+
+        <Setter Property="RowStyle" Value="{StaticResource CommitsRowStyle}" />
+        <Setter Property="CellStyle">
+            <Setter.Value>
+                <Style TargetType="DataGridCell">
+                    <Setter Property="Focusable" Value="False" />
+                    <Setter Property="Padding" Value="4" />
+                    <Setter Property="BorderThickness" Value="0" />
+                    <Setter Property="Background" Value="Transparent" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type DataGridCell}">
+                                <Border Padding="{TemplateBinding Padding}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                                    <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
